[package]
name = "try_or_wrap_s"
version = "0.1.0"
authors = ["Thomas BESSOU <thomas.bessou@hotmail.fr>"]
edition = "2018"
description = "`?` or `try!` macro, with an additional wrapping of the error in something else"
repository = "https://github.com/Ten0/rust-try_or_wrap_s"
license = "LGPL-3.0-only"

[dependencies]
